# EWEngine

./: .clangformatter-putofffornow  .gitignore  CMakeLists.txt  CMakePresets.json  gpu_crash_dump.nv-gpudmp
.vscode_temp/: launch.json  settings.json
cmake/: framework.cmake  harfbuzz.cmake  imageprocessor.cmake  imgui.cmake  imguizmo.cmake  lab.cmake  marl.cmake  rapidjson.cmake  tinyobj.cmake  xxhash.cmake
enc_temp_folder/ef2d2ae9f32fa8e597fb60e6bf694c4c/: EWEngine.cpp
examples/: CMakeLists.txt  CMakePresets.json  first_test.eip  new file.ewng  triangle_hello_world.cpp
examples/cmake/: python_shader_compiler.cmake
examples/common/: compile_shaders.py  first.eop  first_pr.epr  first_rp.erp  first_st.eri  first_st.est  first_test.eip  folder_new.mie  folder_new.png140737497996133.dii  merge.eop  merge.epr  merge.erp  merge.est  rast.erp  settings.json
examples/common/record/: first
examples/common/shaders/: GlobalPushConstant.glsl  basic copy.frag.spv  basic.vert.spv  compile.bat  leaf.frag.spv  leaf.vert.spv  merge.frag  merge.frag.spv  merge.vert  merge.vert.spv  node.frag  node.frag.spv  node.vert  node.vert.spv  pin.frag  pin.frag.spv  pin.vert  pin.vert.spv  textoverlay.frag.spv  textoverlay.vert.spv
examples/common/shaders/glsl/: GlobalPushConstant.glsl  basic.vert  compile.bat  compile.sh  leaf.frag  leaf.vert  leaf_common.glsl  merge.frag  merge.vert  node.frag  node.vert  pin.vert  textoverlay.frag  textoverlay.vert
include/EWEngine/: EWEngine.h  EngineSettings.h  Font.h  Global.h  InputData.h  Preprocessor.h  STC_Manager.h  Scene.h  TextOverlay.h
include/EWEngine/Assets/: Base.h  BaseInstPackages.h  Buffers.h  DII.h  Extensions.h  FileResource.h  FileSystem.h  GPUTasks.h  Hash.h  ImageLoader.h  ImageViews.h  Images.h  InstPackages.h  Manager.h  ManagerTemplate.h  ObjectPackages.h  PackageRecords.h  RasterPackages.h  Records.h  RenderAttachments.h  RenderGraphs.h  Samplers.h  Shaders.h  SubmissionTasks.h  Tasks.h
include/EWEngine/Assets/Image/: Loader.h
include/EWEngine/Data/: Color.h  ConstructionDelayer.h  ReflectionInfo.h  RingBuffer.h  RingCommandPools.h  RingSemaphores.h  Timing.h  Vertex.h
include/EWEngine/Debug/: RecursiveReflectStruct.h  RenderGraph.h
include/EWEngine/Default/: Models.h
include/EWEngine/Graphics/: Camera.h  CubeMap.h  Font.h  FontObject.h  FontObjectT.h  Mesh.h  Model.h  ObjectModel.h  SpriteSheet.h  TextOverlay.h  TextPackage.h
include/EWEngine/Graphics/SpecializedTasks/: ImguiTask.h  MergeTask.h
include/EWEngine/Imgui/: DragDrop.h  Framework_Imgui.h  Framework_Imgui_Refl.h  ImguiFileExplorer.h  ImguiHandler.h  Objects.h  Params.h
include/EWEngine/Imgui/ImNodes/: NodeGraph_Manager.h  imnodes.h  imnodes_ewe.h  imnodes_internal.h
include/EWEngine/Imgui/ImNodes/Graph/: GPUTask_NG.h  InstructionPackage_NG.h  PackageRecord_NG.h  RasterPackage_NG.h  Record_NG.h  RenderGraph_NG.h  SubmissionTask_NG.h
include/EWEngine/NodeGraph/: ContiguousContainer.h  GPUTask_NG.h  Graph.h  InstructionPackageNodeGraph.h  InstructionPackage_NG.h  Link.h  Node.h  NodeGraph_Manager.h  PackageRecord_NG.h  Pin.h  RasterTaskNodeGraph.h  RecordNodeGraph.h  Record_NG.h  RenderGraphNodeGraph.h  RenderGraph_NG.h  SubmissionTask_NG.h
include/EWEngine/Reflect/: Enum.h  ImguiReflection.h  Reflect.h
include/EWEngine/Reflection/: ImguiReflection.h  Reflect.h
include/EWEngine/Systems/: LeafSystem.h  SceneManager.h  Sound_Engine.h  TinyObjLoader.h
include/EWEngine/Tools/: FileResource.h  ImguiFileExplorer.h  ImguiHandler.h  UIHelper.h
src/: AssetBaseInstPackages.cpp  AssetBuffers.cpp  AssetDII.cpp  AssetGPUTasks.cpp  AssetHash.cpp  AssetImageViews.cpp  AssetImages.cpp  AssetInstPackages.cpp  AssetManager.cpp  AssetObjectPackages.cpp  AssetPackageRecords.cpp  AssetRasterPackages.cpp  AssetRecords.cpp  AssetRenderGraphs.cpp  AssetSamplers.cpp  AssetShaders.cpp  AssetSubTasks.cpp  AssetTasks.cpp  AssetsRenderAttachments.cpp  Camera.cpp  DebugRenderGraph.cpp  DragDrop.cpp  EWEngine.cpp  EngineSettings.cpp  FileResource.cpp  FileSystem.cpp  Font.cpp  FontObject.cpp  Framework_Imgui.cpp  GPUTask_NG.cpp  Global.cpp  Graph.cpp  ImageLoader.cpp  ImguiFileExplorer.cpp  ImguiHandler.cpp  ImguiObjects.cpp  ImguiParams.cpp  ImguiTask.cpp  InputData.cpp  InstructionPackageNodeGraph.cpp  (+30 more)
